--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
     "pg": "^3.4.0",
+    "request": "^2.39.0",
     "sequelize": "^1.7.9",
     "sequelize-cli": "^0.2.3"
   }
