--- a/config/config.json
+++ b/config/config.json
@@ -9,9 +9,13 @@
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
-  "production": {
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
-  }
+"production": 
+    {
+        "dialect": "postgres",
+        "username": "wwgqepelifxvtw",
+        "password": "984PqnRo2aP2ftDHWHfXZyg6GF",
+        "host": "ec2-54-225-101-119.compute-1.amazonaws.com",
+        "port": "5432",
+        "database": "d29ractlrsbd1c"
+    }
 }
